--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,11 @@
   "private": true,
   "dependencies": {
     "iron-elements": "PolymerElements/iron-elements#^1.0.0",
+    "paper-button": "Polymer/paper-item#master",
     "polymer": "Polymer/polymer#^1.2.0",
     "font-awesome": "^4.5.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "paper-item": "PolymerElements/paper-item#^1.1.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
