--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,11 @@
   "devDependencies": {
     "web-component-tester": "^4.0.0"
   },
-  "ignore": []
+  "ignore": [],
+  "resolutions": {
+    "polymer": "^1.2.4",
+    "paper-button": "^1.0.0",
+    "font-roboto": "^1.0.1",
+    "paper-ripple": "^1.0.0"
+  }
 }
