--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-element",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "authors": [
     "Pavel Makhov <streetturtle@gmail.com>"
   ],
@@ -13,21 +13,18 @@
   ],
   "private": true,
   "dependencies": {
-    "iron-elements": "PolymerElements/iron-elements#^1.0.0",
-    "paper-button": "Polymer/paper-item#master",
-    "polymer": "Polymer/polymer#^1.2.0",
-    "font-awesome": "^4.5.0",
-    "bootstrap": "^3.3.6",
-    "paper-item": "PolymerElements/paper-item#^1.1.4"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "pdfjs-dist": "^1.4.257",
+    "paper-button": "^1.0.11",
+    "demo-snippet": "^1.0.0",
+    "iron-demo-helpers": "^1.2.3",
+    "iron-ajax": "^1.2.0",
+    "iron-image": "^1.2.3",
+    "paper-card": "^0.1.5",
+    "paper-toolbar": "^1.1.4"
   },
   "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
     "web-component-tester": "^4.0.0"
-  },
-  "ignore": [],
-  "resolutions": {
-    "polymer": "^1.2.4",
-    "paper-button": "^1.0.0",
-    "font-roboto": "^1.0.1",
-    "paper-ripple": "^1.0.0"
   }
 }
