go to given pageNum

--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "iron-ajax": "^1.2.0",
     "iron-image": "^1.2.3",
     "paper-card": "^0.1.5",
-    "paper-toolbar": "^1.1.4"
+    "paper-toolbar": "^1.1.4",
+    "iron-input": "^1.0.10",
+    "paper-input": "^1.1.11"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
