--- a/bower.json
+++ b/bower.json
@@ -14,20 +14,16 @@
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
-    "pdfjs-dist": "^1.4.257",
-    "paper-button": "^1.0.11",
-    "demo-snippet": "^1.0.0",
-    "iron-demo-helpers": "^1.2.3",
-    "iron-ajax": "^1.2.0",
-    "iron-image": "^1.2.3",
-    "paper-card": "^0.1.5",
-    "paper-toolbar": "^1.1.4",
-    "iron-input": "^1.0.10",
-    "paper-input": "^1.1.11",
-    "paper-spinner": "^1.1.1"
+    "iron-image": "PolymerElements/iron-image#^1.2.3",
+    "iron-input": "PolymerElements/iron-input#^1.0.10",
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "paper-input": "PolymerElements/paper-input#^1.1.11",
+    "paper-spinner": "PolymerElements/paper-spinner#^1.1.1",
+    "pdfjs-dist": "^1.5.258"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.3",
     "web-component-tester": "^4.0.0"
   }
 }
