--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Pavel Makhov <streetturtle@gmail.com>"
   ],
-  "description": "PDF viewer element for Polymer 1.0",
+  "description": "PDF viewer element for Polymer 2.0",
   "keywords": [
     "web-components",
     "web-component",
@@ -12,18 +12,21 @@
     "pdf"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "iron-image": "PolymerElements/iron-image#^1.2.3",
-    "iron-input": "PolymerElements/iron-input#^1.0.10",
-    "paper-card": "PolymerElements/paper-card#^1.1.1",
-    "paper-input": "PolymerElements/paper-input#^1.1.11",
-    "paper-spinner": "PolymerElements/paper-spinner#^1.1.1",
-    "pdfjs-dist": "^1.5.258"
+    "polymer": "Polymer/polymer#^2.7.0",
+    "iron-image": "PolymerElements/iron-image#^2.2.1",
+    "iron-input": "PolymerElements/iron-input#^2.1.3",
+    "paper-card": "PolymerElements/paper-card#^2.1.0",
+    "paper-input": "PolymerElements/paper-input#^2.2.3",
+    "paper-spinner": "PolymerElements/paper-spinner#^2.1.0",
+    "pdfjs-dist": "^1.5.258",
+    "iron-icons": "2.1.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~2.2.0",
+    "app-layout": "2.1.1"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.3",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.1.2",
+    "web-component-tester": "^6.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.3.2"
   }
 }
